src/components/header/header.scss
.header {
  height: 300px;
  width: 100%;
  display: flex;
  flex-direction: column;
  border: 2px;

  .fangear {
    display: flex;
    color: red !important;
    justify-content: center;
    a {
      color: red !important;
      text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
      padding: 0 10px;
    }
  }

  .logo-container {
    height: 75%;
    margin: 0 auto;
    width: 400px;
  }

  .options {
    width: 100%;
    height: 20%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin: auto;
    cursor: pointer;

    cursor: pointer;
  }

  h2 {
    margin: 0 !important;
  }
}

.selected {
  color: red;
}

@media screen and (min-width: 450px) {
  .header {
    height: 300px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 25px;
    border: 2px;
    border-color: black;

    .logo-container {
      height: 78%;
      width: 400px;
    }

    .options {
      width: 100%;
      height: 22%;
      display: flex;
      align-items: center;
      justify-content: center;

      .option {
        padding: 10px 15px;
      }
    }

    .selected {
      color: red;
    }
  }
}

